--- a/appointmentService/pom.xml
+++ b/appointmentService/pom.xml
@@ -12,9 +12,9 @@
     </parent>
     
     <groupId>com.hospital</groupId>
-    <artifactId>patientService</artifactId>
+    <artifactId>appointmentService</artifactId>
     <version>1.0.0</version>
-    <name>Patient Service</name>
+    <name>Appointment Service</name>
     
     <properties>
         <java.version>17</java.version>
